--- a/packages/firebase_app_check/firebase_app_check/android/build.gradle
+++ b/packages/firebase_app_check/firebase_app_check/android/build.gradle
@@ -41,7 +41,7 @@ android {
     targetCompatibility JavaVersion.VERSION_1_8
   }
   defaultConfig {
-    minSdkVersion 16
+    minSdkVersion 21
     testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
   }
   lintOptions {
@@ -51,8 +51,8 @@ android {
     api firebaseCoreProject
     implementation platform("com.google.firebase:firebase-bom:${getRootProjectExtOrCoreProperty("FirebaseSDKVersion", firebaseCoreProject)}")
     // TODO: Since App Check is a beta SDK it's not available in the Firebase Android BoM so we need to specify an exact version here.
-    implementation 'com.google.firebase:firebase-appcheck-safetynet:16.0.0-beta04'
-    implementation 'com.google.firebase:firebase-appcheck-debug:16.0.0-beta04'
+    implementation 'com.google.firebase:firebase-appcheck-safetynet:16.0.1'
+    implementation 'com.google.firebase:firebase-appcheck-debug:16.0.1'
     implementation 'androidx.annotation:annotation:1.1.0'
   }
 }
